--- a/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
+++ b/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
@@ -9,7 +9,8 @@
         <deletable-item *ngFor="let item of destination" [isDisabled]="isDisabled" [labelFunction]="selectedItemLabelFunction" [item]="item" (deleteSelectedItem)="onDeleteSelectedItem($event)"></deletable-item>
       </div>
       <div class="table-cell dropdown-text-input-container clickable" [ngClass]="{disabled: isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)}" (click)="onInputClick()">
-        <input class="form-control" [disabled]="isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)" type="text" placeholder="{{placeholder}}" [(ngModel)]="textInput" (ngModelChange)="onTextInputChange()"/>
+        <input *ngIf="foControl" [formControl]="foControl" class="form-control" [disabled]="isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)" type="text" placeholder="{{placeholder}}" [(ngModel)]="textInput" (ngModelChange)="onTextInputChange()"/>
+        <input *ngIf="!foControl" class="form-control" [disabled]="isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)" type="text" placeholder="{{placeholder}}" [(ngModel)]="textInput" (ngModelChange)="onTextInputChange()"/>
         <div class="drop-down-arrow" [ngClass]="{disabled: maxItems > 1 && destination && destination.length >= maxItems}"><i class="fa fa-angle-down fa-2x"></i></div>
       </div>
     </div>
