--- a/src/app/views/user/user-settings/user-profile/user-profile.component.scss
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.scss
@@ -24,11 +24,11 @@
 
     .profile-input-permit-radio-container {
       display: flex;
+      margin-top: 30px;
 
       > div {
         text-align: center;
-        padding: 0 10px;
-        margin-right: 50px;
+        width: 90px;
 
         > label {
           font-size: 16px;
@@ -128,6 +128,14 @@
   .profile-button-container {
     padding-bottom: 1.5em;
     text-align: center;
+
+    .save-message {
+      color: green;
+    }
+
+    .error-message {
+      color: red;
+    }
 
     .error-message {
       color: $color-cerise-500;
