--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -13,7 +13,7 @@
 
       <div class="profile-input-container">
         <label>{{'user.profile.form.country.label' | translate}} *:</label>
-        <autocomplete-dropdown [foControl]="profileForm.controls['country']" #countryDropdown (dropdownListItemSelect)="onNCountryOfOriginSelect($event)" [placeholder]="'user.profile.form.country.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel"
+        <autocomplete-dropdown #countryDropdown (dropdownListItemSelect)="onNCountryOfOriginSelect($event)" [placeholder]="'user.profile.form.country.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel"
             [getData]="getCountries()">
         </autocomplete-dropdown>
         <div *ngIf="!user.countryOfOriginCode" class="alert alert-danger">{{'user.profile.form.permit.type.validation' | translate}}.</div>
@@ -55,8 +55,9 @@
         </div>
       </div>
 
-      <div class="profile-upload-button-container">
-        <button class="btn-secondary btn-small btn">{{'user.profile.form.permit.upload.button' | translate}}</button>
+      <div *ngIf="gotPermit === 'true'" class="profile-upload-button-container">
+        <input type="file" id="permit-image-filename" name="permit-image-filename" class="input-image-upload" (change)="onPermitImageFilenameChange($event)" accept="image/*">
+        <label for="permit-image-filename" class="btn-secondary btn-small btn btn-image-upload" >{{'user.profile.form.permit.upload.button' | translate}}</label>
         <p>{{'user.profile.form.permit.upload.description' | translate}}</p>
       </div>
 
@@ -65,7 +66,7 @@
       <div class="profile-input-container">
         <label>{{'user.profile.form.languages.label' | translate}}:</label>
         <autocomplete-dropdown (dropdownListItemSelect)="onLanguageSelect($event)" [clearDestinationAfterSelection]="true" [placeholder]="'user.profile.form.languages.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel"
-            [isDisabled]="false" [getData]="getLanguages()">
+           [getData]="getLanguages()">
         </autocomplete-dropdown>
 
         <div class="profile-input-languages-table-container">
@@ -76,7 +77,7 @@
                 <i class="fa fa-times" aria-hidden="true"></i>
               </div>
               <div class="profile-input-languages-table-row-inner-dropdown-container">
-                <autocomplete-dropdown [lookupType]="'list'" [enumList]="languageProficiencyLevelsAvailable" [(destination)]="userLanguage.proficiency" [placeholder]="'language.proficiency.placeholder' | translate" [isDisabled]="false" [autocompleteResultLabelFunction]="namePropertyLabel"
+                <autocomplete-dropdown [lookupType]="'list'" [enumList]="languageProficiencyLevelsAvailable" [(destination)]="userLanguage.proficiency" [placeholder]="'language.proficiency.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel"
                     [selectedItemLabelFunction]="namePropertyLabel">
                 </autocomplete-dropdown>
               </div>
@@ -105,7 +106,7 @@ Documents not supported yet. TODO implement when documents supported in backend.
       <div class="profile-button-container">
         <div *ngIf="errorMessage" class="error-message">{{errorMessage | translate}}</div>
         <div *ngIf="saveSuccess" class="save-message">{{'user.profile.form.submit.success' | translate}}</div>
-        <button type="submit" [disabled]="false" class="btn-primary btn-small btn">{{'user.profile.form.submit.button' | translate}}</button>
+        <button type="submit" class="btn-primary btn-small btn">{{'user.profile.form.submit.button' | translate}}</button>
       </div>
     </form>
 
