--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -111,7 +111,7 @@ Documents not supported yet. TODO implement when documents supported in backend.
 
       <div class="profile-button-container">
         <div *ngIf="errorMessage" class="error-message">{{errorMessage | translate}}</div>
-        <div *ngIf="errorCause" class="error-message">{{errorCause}}</div>
+        <div *ngIf="errorCause" class="error-message">{{errorCause | translate}}</div>
         <div *ngIf="saveSuccess" class="save-message">{{'user.profile.form.submit.success' | translate}}</div>
         <button type="submit" class="btn-primary btn-small btn">{{'user.profile.form.submit.button' | translate}}</button>
       </div>
