--- a/src/app/views/user/user-settings/user-profile/user-profile.component.scss
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.scss
@@ -134,6 +134,10 @@
     p {
       margin-top: 10px;
     }
+
+    .permit-saved-message {
+      color: green;
+    }
   }
 
   .profile-button-container {
@@ -142,10 +146,6 @@
 
     .save-message {
       color: green;
-    }
-
-    .error-message {
-      color: red;
     }
 
     .error-message {
