App width should now be as intended. max 1199 px and below that 100%

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="navbar-fixed-top" [ngStyle]="(isNavigationMenuVisible || isLanguageMenuVisible) && {'height': '100%'}">
-  <div class="container">
+  <div class="navbar-container">
     <nav class="header navbar navbar-light bg-faded">
       <div class="row navbar-container">
         <div class="col-xs row flex-items-xs-middle">
