--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -10,6 +10,9 @@
     <div class="col-xs" *ngIf="!user">
       <div class="header-box-title">{{'start.hero_section.left.title' | translate}}</div>
       <div class="header-box-text">{{'start.hero_section.left.text' | translate}}</div>
+      <div class="home-header-button-container">
+        <a routerLink="/user/register" class="medium-button-primary-light">{{'menu.main.create_account'| translate}}</a><br>
+      </div>
     </div>
   </div>
   <div class="row home-new-jobs">
