--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="row home-new-jobs">
-    <div class="col-xs-12 col-sm-9">
+    <div class="col-xs-12 col-sm-9 title">
       <h2>{{'start.job_section.title' | translate}}</h2>
     </div>
     <div class="col-xs-12 col-sm-3 show-all">
